--- a/package.json
+++ b/package.json
@@ -1,31 +1,57 @@
 {
-  "name": "rcr-example",
-  "version": "0.0.1",
-  "private": true,
+  "name": "chrome-extension-boilerplate",
+  "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "homepage": "https://fxnoob.github.io/chrome-extension-boilerplate",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/gulp"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "dev": "webpack --watch --progress --colors --config webpack.config.js --mode=development",
+    "build": "webpack --progress --colors --config webpack.config.js --mode=production",
+    "jsdoc": "jsdoc src -r",
+    "deploy_jsdoc": "yarn jsdoc &&  gh-pages -d out",
+    "prettier_check_src": "prettier --check src/**/*.{js,jsx}",
+    "prettier_check_popup": "prettier --check src/**/*.{js,jsx}",
+    "prettier_check_option": "prettier --check src/**/*.{js,jsx}",
+    "prettier_check_content": "prettier --check src/**/*.{js,jsx}",
+    "test": "yarn prettier_check_src && yarn prettier_check_popup && yarn prettier_check_option && yarn prettier_check_content && yarn build"
   },
-  "author": "Tyler Shaddix",
-  "dependencies": {
-    "react": "^15.5.0",
-    "react-dom": "^15.5.0",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "text-to-speech-js": "^1.1.9",
-    "webext-redux": "^2.1.2"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "gulp": "3.9.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.7",
-    "rimraf": "^2.5.0",
-    "webpack": "^2.6.0"
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
+    "file-loader": "^4.2.0",
+    "gh-pages": "^2.1.1",
+    "husky": "^3.0.9",
+    "image-webpack-loader": "^5.0.0",
+    "jsdoc": "^3.6.3",
+    "prettier": "1.18.2",
+    "pretty-quick": "^2.0.0",
+    "react-hot-loader": "^4.12.10",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@babel/runtime": "^7.5.5",
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
