--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "webext-redux": "^2.1.6"
   }
 }
