--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@auto-it/git-tag": "^9.54.2",
+    "@auto-it/slack": "^9.54.2",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-class-properties": "^7.2.0",
@@ -32,6 +34,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "auto": "^9.54.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "file-loader": "^4.2.0",
