slack message check

--- a/.autorc
+++ b/.autorc
@@ -7,6 +7,6 @@
   "repo": "medium-audio",
   "name": "Mukul Chaware",
   "email": "mukul.chaware13@gmail.com",
-  "onlyPublishWithReleaseLabel": true
+  "onlyPublishWithReleaseLabel": false
 }
 
